--- a/css/contact.css
+++ b/css/contact.css
@@ -5,12 +5,31 @@
   font-family: "Poppins", sans-serif;
 }
 
+#contact{
+  padding: 0;
+  margin-bottom: 50px;
+}
+
 .contact-header {
   background-image: url(../images/contacts.jpg);
   background-size: cover;
   background-position: center;
-  padding: 70px 0;
+  padding: 150px 0;
   color: #f7f7f7;
+  position: relative;
+  z-index: 0;
+
+}
+
+.contact-header::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
 }
 
 .contact h2 {
