--- a/css/demo.css
+++ b/css/demo.css
@@ -9,17 +9,35 @@ body {
   color: var(--text-color);
 }
 
+#contact-header{
+padding: 0;
+}
+
 .contact-header {
   background-image: url(../images/demo.png);
   background-position: center;
   background-size: cover;
-  padding: 70px 0;
-  color: #038dc4;
+  padding: 150px 0;
+  margin-bottom: 50px;
+  color: #fff;
   text-align: center;
+  position: relative;
+  z-index: 0;
 }
 
+
+.contact-header::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
 .contact-header h2 {
-  color: #038dc4;
+  color: #fff;
   margin-bottom: 10px;
 }
 
