--- a/css/singleProduct.css
+++ b/css/singleProduct.css
@@ -11,7 +11,7 @@
 }
 
 header nav ul li a::before,
-header nav ul li a::after{
+header nav ul li a::after {
   content: none !important;
 }
 
@@ -21,9 +21,22 @@ header nav ul li a::after{
 
 .about-section {
   text-align: center;
-  padding: 250px 0;
+  padding: 170px 0;
   margin-bottom: 50px;
   color: #fff;
+  position: relative;
+  z-index: 0;
+}
+
+.about-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: -1;
 }
 
 .about-section h2 {
@@ -228,14 +241,8 @@ header nav ul li a::after{
 
 /* demo video */
 
-#contact,
-#demo {
+#contact {
   background-color: #f7f7f7;
-}
-
-#demo {
-  margin: 25px auto;
-  padding: inherit 0;
 }
 
 #demo h3,
@@ -246,10 +253,74 @@ header nav ul li a::after{
   color: var(--second-text-color);
 }
 
+#demo {
+  margin: 25px 0;
+  padding: 0;
+}
+
 .demo-video {
-  display: block;
+  position: relative;
+  cursor: pointer;
   width: 100%;
-  padding: 30px 0;
+  height: 600px;
+}
+
+.thumbnail {
+  width: 100%;
+  height: 100%;
+  border-bottom: 3px;
+  object-fit: cover;
+}
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.6);
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease, background 0.3s ease;
+  animation: pulse 1s infinite;
+}
+
+.play-button::before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 50px solid #fff;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+}
+
+.play-button:hover {
+  transform: translate(-50%, -50%) scale(1.1);
+  background: rgba(87, 3, 3, 0.8);
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.5);
+  }
+  70% {
+    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+
+#videoframe {
+  display: none;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
 
 /* installation */
@@ -300,6 +371,11 @@ header nav ul li a::after{
 
 h3 {
   color: var(--second-text-color);
+}
+
+.fa-server,
+.fa-cloud {
+  font-size: 1.5rem;
 }
 
 @media only screen and (max-width: 1200px) {
