--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header nav ul {
 } */
 
 header nav ul li a::before,
-header nav ul li a::after{
+header nav ul li a::after {
   content: none !important;
 }
 
@@ -119,6 +119,7 @@ header nav ul li a:hover {
 
 .dropdown-container {
   position: relative;
+  transition: 0.3s ease-in-out;
 }
 
 .dropdown {
@@ -127,9 +128,9 @@ header nav ul li a:hover {
   border-radius: 3px;
   position: absolute;
   min-width: 160px;
-  top: 100%; 
-  left: 50%; 
-  transform: translateX(-50%); 
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
   z-index: 1000;
@@ -144,7 +145,7 @@ header nav ul li a:hover {
   transition: all 0.3s;
 }
 
-.dropdown li a:hover, 
+.dropdown li a:hover,
 .dropdown li a:focus {
   background-color: #044258;
   color: #fff;
@@ -152,7 +153,37 @@ header nav ul li a:hover {
 
 .dropdown-container:hover .dropdown {
   display: block;
+  transition: 0.3s ease-in-out;
 }
+
+.plusminus {
+  position: relative;
+  display: inline-block;
+  width: 0.7em;
+  height: 0.6em;
+}
+
+.fa-plus,
+.fa-minus {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.3s ease-in-out;
+  font-size: 0.8rem;
+}
+
+.fa-minus {
+  opacity: 0;
+}
+
+.dropdown-container:hover .fa-plus {
+  opacity: 0;
+}
+.dropdown-container:hover .fa-minus {
+  opacity: 1;
+}
+
 /* header nav ul li a::after {
   content: "";
   position: absolute;
@@ -420,7 +451,7 @@ header nav ul li a:hover::after {
   opacity: 0.5;
   width: 100%;
   height: 100%;
-  transition: top 0.9s ease-in-out, opacity 0.8s;
+  transition: top 0.5s ease-in-out, opacity 0.8s;
   z-index: 2;
   pointer-events: none;
 }
@@ -528,11 +559,99 @@ header nav ul li a:hover::after {
 
 /* Footer */
 footer {
-  background-color: #055f80;
+  background-color: #201f1f;
   color: #ffffff;
   text-align: center;
-  padding: 2rem 0;
+  padding: 1.5rem 0;
   font-family: "Poppins", sans-serif;
+}
+
+.footer-main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 20px;
+  padding-top: 40px;
+}
+
+.footer-logo {
+  min-width: 30%;
+  margin: auto;
+}
+
+.footer-logo img {
+  width: 25%;
+}
+
+.quick-links nav ul,
+.social-links ul {
+  list-style: none;
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+
+.quick-links nav ul li {
+  text-align: left;
+  margin-bottom: 10px;
+  position: relative;
+  left: 40%;
+}
+
+.quick-links nav ul li a,
+.social-links ul li a {
+  text-decoration: none;
+  color: #fff;
+  display: inline-flex;
+  align-items: center;
+  transition: color 0.3s ease;
+}
+
+:is(.quick-links nav ul li a, .social-links ul li a):hover {
+  color: #999999;
+}
+
+.social-links ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.social-links ul li a i {
+  font-size: 1.2rem;
+}
+
+footer hr {
+  width: 80%;
+  margin: 30px auto;
+}
+
+.color-yellow {
+  color: #ebd406;
+  text-decoration: none;
+}
+
+#back-to-top {
+  background-color: #333;
+  border-radius: 50%;
+  border: none;
+  padding: 15px 20px;
+  font-size: 1.2rem;
+  color: #fff;
+  transition: transform 0.3s ease;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  display: none;
+}
+
+#back-to-top:hover {
+  transform: scale(1.1);
+}
+
+#back-to-top.show {
+  display: block;
 }
 
 /* Responsive Design */
@@ -546,7 +665,7 @@ footer {
     height: 100vh;
     width: 0;
     overflow-x: auto;
-    transition: all 0.9s ease-in-out;
+    transition: all 0.7s ease-in-out;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: -1;
   }
@@ -559,7 +678,7 @@ footer {
     height: 100vh;
     width: 0;
     overflow-x: hidden;
-    transition: all 0.9s ease-in-out;
+    transition: all 0.7s ease-in-out;
     background-color: #055e81;
     filter: drop-shadow(5px 4px 8px rgba(231, 230, 230, 0.637));
     z-index: 9999;
@@ -620,6 +739,36 @@ footer {
     display: flex;
   }
 
+  .fa-plus,
+  .fa-minus {
+    margin-left: 10px;
+  }
+
+  .dropdown {
+    background-color: #055e81;
+    position: relative;
+    margin-top: 0;
+    top: 0;
+    left: 0;
+    transition: 0.5s ease-in-out;
+  }
+
+  .dropdown li a {
+    color: #fff;
+    margin: 0;
+    transition: 0.5s ease-in-out;
+  }
+
+  .dropdown li a:hover,
+  .dropdown li a:focus {
+    background-color: #044258;
+    color: #fff;
+  }
+
+  .dropdown-container:hover .dropdown {
+    display: block;
+  }
+
   .logo img {
     width: 30%;
   }
@@ -636,6 +785,10 @@ footer {
   .next {
     font-size: 16px;
     padding: 12px;
+  }
+
+  .about-section {
+    background-size: contain;
   }
 }
 
